--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@
 }
 
 body {
+  background-color: #04414d;
   margin: 0;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
@@ -99,9 +100,13 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  /*background-color: var(--bs-body-bg);*/
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.container {
+  margin-top: 10%;
 }
 
 hr {
