--- a/css/styles.css
+++ b/css/styles.css
@@ -11052,7 +11052,7 @@ body {
   color: #212529;
 }
 .sb-sidenav-light .sb-sidenav-menu .sb-sidenav-menu-heading {
-  color: #adb5bd;
+  color: #000;
 }
 .sb-sidenav-light .sb-sidenav-menu .nav-link {
   color: #212529;
